# hubber_xml

./: .env  Cargo.toml  products.sql
migrations/2019-12-20-125248_create_products/: up.sql
src/: main.rs  models.rs  parser.rs  process.rs  schema.rs
