[package]
name = "hubber_xml"
version = "0.0.3"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
quick-xml = "0.17.2"
failure = "0.1.6"
diesel = { version = "1.4.3", features = ["mysql"] }
dotenv = "0.9.0"
log = "0.4.8"
env_logger = "0.7.1"
